Fix link and image overlapping

--- a/src/main/webapp/resources/css/master.css
+++ b/src/main/webapp/resources/css/master.css
@@ -16,6 +16,7 @@
 }
 
 .fix-footer-overlay {
+    position: relative;
     z-index: 2;
 }
 
